# tldr

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml
experiments/: generation_find_params.py  srl_training.py  summarization.py  summarization_baseline.py  summarization_can_sentences_be_merged.py  summarization_full_monty.py  summarization_modified_textrank.py  summarization_oracle.py  summarization_toy.py  summarization_with_srl_toy.py
src/tldr/: entry.py  main.py  types.py
src/tldr/data/: __init__.py  alice_and_bob.py  graph.py  nlp.py  prep.py  reader.py
src/tldr/generate/: config.py  hyperparam_util.py  main.py  pipelines.py  serialization.py
src/tldr/generate/data/: default_config.json
src/tldr/srl/: data.py  inference.py  train.py  util.py
src/tldr/summarize/: cluster_interface.py  data.py  eval.py  legacy.py  main.py  merge.py  putzfisch.py
src/tldr/tracking/: __init__.py  main.py  optuna.py  query.py  training.py
src/tldr/util/: adjectives.txt  dishes.txt  names.py
test/: conftest.py  test_data.py  test_e2e.py  test_generation.py  test_serialization.py  test_srl.py  test_summarization.py  test_tracking.py
test/resources/: alice_and_bob.txt
